--- a/client/style/screen.css
+++ b/client/style/screen.css
@@ -819,13 +819,14 @@ section.container section.space article textarea {
 }
 /* line 109, ../sass/layout/_article.scss */
 section.container section.space article header {
-  background: green;
+  background: white !important;
   display: inline-block;
   text-align: left;
   height: 1.5rem;
   z-index: 4;
   position: absolute;
-  top: -1.5rem;
+  top: -0.75rem;
+  margin-right: 0.5rem;
   padding-left: 0.5rem;
   padding-right: 0.33333rem;
   font-size: .666em;
@@ -834,15 +835,15 @@ section.container section.space article header {
   text-transform: uppercase !important;
   font-size: 6.66pt;
   font-family: "Futura W01 Medium";
-  transform-origin: bottom left;
-  -webkit-transform-origin: bottom left;
+  transform-origin: center left;
+  -webkit-transform-origin: center left;
   opacity: 0;
   -moz-transition: opacity 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   -o-transition: opacity 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   -webkit-transition: opacity 0.25s cubic-bezier(0.19, 1, 0.22, 1);
   transition: opacity 0.25s cubic-bezier(0.19, 1, 0.22, 1);
 }
-/* line 128, ../sass/layout/_article.scss */
+/* line 130, ../sass/layout/_article.scss */
 section.container section.space article header author {
   display: inline-block;
   position: relative;
@@ -850,7 +851,7 @@ section.container section.space article header author {
   top: -0.66667rem;
   white-space: nowrap;
 }
-/* line 136, ../sass/layout/_article.scss */
+/* line 138, ../sass/layout/_article.scss */
 section.container section.space article header a.delete {
   display: inline-block;
   position: absolute;
@@ -869,11 +870,11 @@ section.container section.space article header a.delete {
   background-image: url("../images/elementClose.png");
   background-size: 100% 100%;
 }
-/* line 151, ../sass/layout/_article.scss */
+/* line 153, ../sass/layout/_article.scss */
 section.container section.space article header a.delete:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
-/* line 159, ../sass/layout/_article.scss */
+/* line 161, ../sass/layout/_article.scss */
 section.container section.space article .card {
   position: relative;
   max-width: 32rem;
@@ -887,7 +888,7 @@ section.container section.space article .card {
   -webkit-transition-property: -webkit-transform, -webkit-transform, -moz-transform, box-shadow, -webkit-box-shadow, -moz-box-shadow, background-color;
   transition-property: transform, -webkit-transform, -moz-transform, box-shadow, -webkit-box-shadow, -moz-box-shadow, background-color;
 }
-/* line 172, ../sass/layout/_article.scss */
+/* line 174, ../sass/layout/_article.scss */
 section.container section.space article .card.text {
   background-color: rgba(255, 255, 255, 0.925);
   -moz-box-shadow: 0 0.16667rem 1rem rgba(0, 0, 0, 0.125);
@@ -896,30 +897,30 @@ section.container section.space article .card.text {
   padding: 0.5rem 1rem 0.5rem 1rem;
   width: auto;
 }
-/* line 177, ../sass/layout/_article.scss */
+/* line 179, ../sass/layout/_article.scss */
 section.container section.space article .card.image {
   width: 48rem;
   overflow: hidden;
 }
-/* line 182, ../sass/layout/_article.scss */
+/* line 184, ../sass/layout/_article.scss */
 section.container section.space article .card.image .ui-resizable-handle:after {
   color: white !important;
 }
-/* line 191, ../sass/layout/_article.scss */
+/* line 193, ../sass/layout/_article.scss */
 section.container section.space article .card.website:hover .card.header.text .description {
   opacity: 1;
   height: auto;
 }
-/* line 197, ../sass/layout/_article.scss */
+/* line 199, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text {
   position: relative;
   z-index: 2;
 }
-/* line 201, ../sass/layout/_article.scss */
+/* line 203, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .title p {
   line-height: 1.25em;
 }
-/* line 205, ../sass/layout/_article.scss */
+/* line 207, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .url p {
   font-size: .666em;
   font-family: "Futura W01 Medium";
@@ -930,7 +931,7 @@ section.container section.space article .card.website .card.header.text .url p {
   line-height: 2em;
   opacity: .25;
 }
-/* line 211, ../sass/layout/_article.scss */
+/* line 213, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .description {
   opacity: 0;
   height: 0;
@@ -950,7 +951,7 @@ section.container section.space article .card.website .card.header.text .descrip
   -webkit-transition-property: opacity;
   transition-property: opacity;
 }
-/* line 224, ../sass/layout/_article.scss */
+/* line 226, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .description p {
   font-size: 10pt;
   line-height: 1.5em;
@@ -958,20 +959,20 @@ section.container section.space article .card.website .card.header.text .descrip
   padding-top: 1.5rem;
   letter-spacing: .0625em;
 }
-/* line 227, ../sass/layout/_article.scss */
+/* line 229, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .description p a {
   word-break: break-all;
 }
-/* line 235, ../sass/layout/_article.scss */
+/* line 237, ../sass/layout/_article.scss */
 section.container section.space article .card.website.image {
   max-height: 36rem;
 }
-/* line 245, ../sass/layout/_article.scss */
+/* line 247, ../sass/layout/_article.scss */
 section.container section.space article .card img {
   width: 100%;
   margin-bottom: -12pt;
 }
-/* line 251, ../sass/layout/_article.scss */
+/* line 253, ../sass/layout/_article.scss */
 section.container section.space article .ui-resizable-handle {
   z-index: 9999999;
   right: 0;
@@ -989,7 +990,7 @@ section.container section.space article .ui-resizable-handle {
   height: 1rem;
   width: 1rem;
 }
-/* line 265, ../sass/layout/_article.scss */
+/* line 267, ../sass/layout/_article.scss */
 section.container section.space article .ui-resizable-handle:hover {
   opacity: .5;
 }
